marbelhome.css
h1{
  font-family: Calibri;
  color:#2f3037;
  opacity: .8;
  font-size:10vw;
  text-align: center;
  margin-top:150px;
  margin-bottom: 20px;
  text-shadow: 0px 0px 50px grey;
  margin-bottom: 60px;
}
.main a:hover {
    color: #f6f7fb;
}
hr {
  width:50%; opacity: .6; box-shadow: 0px 0px 20px black;
}

h2 {
  font-family: Calibri;
  text-align: center;
  color:#2f3037;
  font-size:2.5vw;
  margin-top:90px;
  margin-bottom: 20px;
  opacity: .6;
  text-shadow: 0px 0px 50px black;
}
.left{
  text-align: center;
  float: center;
  display: inline-block;
  margin: 0 15px
}
.center{
  text-align: center;
  float: center;
  display: inline-block;
  margin: 0 15px
}
.right{
  text-align: center;
  float: center;
  display: inline-block;
  margin: 0 15px
}

a:link {
    color: #2f3037;
    text-decoration: none;
}
a:visited {
    color: #2f3037;
}
.center a:hover {
    color: yellow;
}
.left a:hover {
    color: #ff6000;
}
.right a:hover {
    color: #00ffba;
}
}
a:active {
    color: #2f3037;

